force-app/main/default/objects/CartOffer__c/CartOffer__c.object-meta.xml
<CustomObject>
    <label>Produto do Carrinho</label>
    <nameField>
        <displayFormat>Produto-{000000}</displayFormat>
        <label>Produto do Carrinho</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos do Carrinho</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>