force-app/main/default/objects/CartOffer__c/fields/CartId__c.field-meta.xml
<CustomField>
    <fullName>CartId__c</fullName>
    <label>Carrinho</label>
    <referenceTo>CartAccount__c</referenceTo>
    <relationshipLabel>Produtos do Carrinho</relationshipLabel>
    <relationshipName>CartOffer</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>