force-app/main/default/objects/CartOffer__c/fields/NumberPortability__c.field-meta.xml
<CustomField>
    <fullName>NumberPortability__c</fullName>
    <label>Número Portabilidade</label>
    <type>Phone</type>
</CustomField>