force-app/main/default/objects/CartOffer__c/fields/OfferId__c.field-meta.xml
<CustomField>
    <fullName>OfferId__c</fullName>
    <label>Oferta</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Ofertas do Carrinho</relationshipLabel>
    <relationshipName>CartOffer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>