force-app/main/default/objects/CartOffer__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Campo para preenchimento da Razão do chip sendo vendido na Alta Móvel RPA.</description>
    <label>Razão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabling</fullName>
                <label>Habilitação</label>
            </value>
            <value>
                <fullName>Portability</fullName>
                <label>Portabilidade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>