force-app/main/default/objects/CartOffer__c/recordTypes/Chip.recordType-meta.xml
<RecordType>
    <fullName>Chip</fullName>
    <active>true</active>
    <description>Produto do tipo Chip</description>
    <label>Chip</label>
</RecordType>