force-app/main/default/objects/CartOffer__c/recordTypes/Fixed.recordType-meta.xml
<RecordType>
    <fullName>Fixed</fullName>
    <active>true</active>
    <description>Plano Fixa Ofertado</description>
    <label>Fixa</label>
</RecordType>