force-app/main/default/objects/CartOffer__c/recordTypes/Mobile.recordType-meta.xml
<RecordType>
    <fullName>Mobile</fullName>
    <active>true</active>
    <description>Plano Móvel Ofertado</description>
    <label>Móvel</label>
</RecordType>