force-app/main/default/objects/CartOffer__c/validationRules/CheckNumberPortabilityAndReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNumberPortabilityAndReason</fullName>
    <active>true</active>
    <description>Validação de preenchimento de campo Razão quando Chip e Número Portabilidade quando Razão for Portabilidade</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
OR(
				AND (
								RecordType.DeveloperName = &quot;Chip&quot;,
							 ISBLANK(TEXT(Reason__c))),
					AND (
								RecordType.DeveloperName = &quot;Chip&quot;,
							 ISPICKVAL(Reason__c, &apos;Portability&apos;),
								ISBLANK(NumberPortability__c)), 
				AND (
								RecordType.DeveloperName = &quot;Chip&quot;,
							 ISPICKVAL(Reason__c, &apos;Enabling&apos;),
								ISCHANGED(NumberPortability__c)), 
				AND (
								NOT(RecordType.DeveloperName = &quot;Chip&quot;),
								OR (
												ISCHANGED(NumberPortability__c),
								    ISCHANGED(Reason__c))
				     )
				)
			)</errorConditionFormula>
    <errorMessage>É obrigatório o preenchimento da Razão para Chip e o Número Portabilidade deve ser preenchido apenas quando Razão Portabilidade.</errorMessage>
</ValidationRule>